fix: dynamic list collapsing issue
Closes #1230

--- a/packages/form-js-viewer/assets/form-js-base.css
+++ b/packages/form-js-viewer/assets/form-js-base.css
@@ -1189,6 +1189,10 @@
   color: var(--color-warning);
 }
 
+.fjs-container .fjs-repeat-row-collapsed {
+  display: none;
+}
+
 .fjs-container .fjs-repeat-render-footer {
   display: flex;
   flex-direction: row;
